--- a/atcrowdfunding07-member-parent/atcrowdfunding12-member-authentication-consumer/src/main/resources/templates/member-reg.html
+++ b/atcrowdfunding07-member-parent/atcrowdfunding12-member-authentication-consumer/src/main/resources/templates/member-reg.html
@@ -23,7 +23,8 @@
             $("#sendBtn").click(function () {
 
                 //1、获取手机号
-                var phoneNum = $.trim($("[name=phoneNum]").val());
+                var phoneNum = $.trim($("#add_phone").val());
+                alert(phoneNum);
 
                 //2、发送ajxa请求
                 $.ajax({
@@ -36,10 +37,14 @@
                     success: function (response) {
                         var result = response.result;
                         if (result == "SUCCESS") {
-                            layer.msg("发送验证码成功，请在1分钟内完成注册！",{icon:1,time:1000});
+                            layer.msg("发送验证码成功，请在1分钟内完成注册！",{icon:1,time:3000,btn:['知道了', '关闭']});
                         }
                         if (result == "FAILED") {
-                            showInformateForPhoneNumNotExist();
+                            if (/^1403$/.test(response.data)) {
+                                showInformateForPhoneNumNotExist("手机号码不存在！");
+                            }else{
+                                showInformateForPhoneNumNotExist("后台出现故障，请停止注册！");
+                            }
                         }
                     },
                     error: function (response) {
@@ -48,40 +53,55 @@
                 });
             });
 
-            //给手机绑定校验功能，应该是11位，且以1开头
-            $("#add_phone").change(function () {
-
-                $("#phoneNum_reminder").empty();
-
-                var phoneNum =$("#add_phone") .val();
-                alert(phoneNum);
-                if (/^1[0-9]{10}$/.test(phoneNum)) {
-                    $("#phoneNum_reminder").removeClass().addClass("text-success").append("手机格式正确！");
-                } else {
-                    $("#phoneNum_reminder").removeClass().addClass("text-warn").append("手机格式错误！");
-                }
-            });
-
             //2、如果是手机号错误，调用该函数，进行提示，并改变样式
-            function showInformateForPhoneNumNotExist() {
-                $("#phoneNum_reminder").empty();
-                $("#phoneNum_reminder").removeClass().addClass("text-danger").append("手机号码不存在！");
+            function showInformateForPhoneNumNotExist(message) {
+                $("#add_phone_div").removeClass("has-success").addClass("has-error");
+                $("#phoneNum_reminder").empty().removeAttr("hidden").append(message);
             }
 
-            //给邮箱绑定校验功能
-            $("#add_email").change(function () {
-                $("#email_reminder").empty();
-                var eamil = $("#add_email").val();
-                alert(eamil);
-                var regex = /^([a-z0-9_\.-]+)@([\da-z\.-]+)\.([a-z\.]{2,6})$/;
-                if (regex.test(eamil)) {
-                    $("#add_email_div").removeClass("has-error").addClass("has-success");
-                    $("#email_reminder").append("邮箱格式正确！");
-                }else {
-                    $("#add_email_div").removeClass("has-success").addClass("has-error");
-                    $("#email_reminder").append("请使用正确的邮箱格式，例如：xxx@qq.com ");
-                }
-            })
+            //绑定改变事件的通用函数
+            function bingChange(input,reminder,div,regex,successMessage,errorMessage) {
+                input.change(function () {
+                    reminder.empty();
+                    var inputVal = input.val();
+                    if (regex.test(inputVal)) {
+                        div.removeClass("has-error").addClass("has-success");
+                        // reminder.removeAttr("hidden").append(successMessage); //不提示信息，仅仅改变框的颜色
+                    }else {
+                        div.removeClass("has-success").addClass("has-error");
+                        reminder.removeAttr("hidden").append(errorMessage);
+                    }
+                });
+            }
+            //给邮箱、密码、手机、用户名进行正则表达式匹配
+            var regexAcct = /^(([a-z0-9_-])|([\u2E80-\u9FFF])){2,16}$/;
+            bingChange($("#add_acct"),$("#acct_reminder"),$("#add_acct_div"),regexAcct,"用户名格式正确！","至少两个字符，可以是汉字、数字、字母、_");
+            var regexUsert = /^(([a-z0-9_-])|([\u2E80-\u9FFF])){2,16}$/;
+            bingChange($("#add_user"),$("#user_reminder"),$("#add_user_div"),regexUsert,"用户昵称格式正确！","至少两个字符，可以是汉字、数字、字母、_");
+            var regexPswd = /^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)[^]{8,16}$/ ;
+            bingChange($("#add_pswd"),$("#pswd_reminder"),$("#add_pswd_div"),regexPswd,"密码格式正确！","至少8个字符，必须包含数字、大小字母");
+            var regexEmail = /^([a-z0-9_\.-]+)@([\da-z\.-]+)\.([a-z\.]{2,6})$/;
+            bingChange($("#add_email"),$("#email_reminder"),$("#add_email_div"),regexEmail,"邮箱格式正确！","请使用正确的邮箱格式，例如：xxx@qq.com ");
+            var regexPhone = /^1[0-9]{10}$/;
+            bingChange($("#add_phone"),$("#phoneNum_reminder"),$("#add_phone_div"),regexPhone,"手机格式正确！","请填写正确的手机号码");
+            var regexCode = /^[0-9]{6,}$/;
+            bingChange($("#add_code"),$("#code_reminder"),$("#add_code_div"),regexCode,"","验证码格式错误！");
+
+            $("#regBtn").click(function () {
+                var flag = true;
+                alert($(".form-group").length);
+                $(".form-group").each(function () {
+                    if (! $(this).hasClass("has-success")) {
+                        flag = false;
+                        if (! $(this).hasClass("has-error")) {
+                            $(this).removeClass("has-success").addClass("has-error");
+                            $(this).find("label").removeAttr("hidden").append("请填写此项！");
+                        }
+                    }
+                });
+                return flag;
+            });
+
         })
     </script>
 </head>
@@ -96,33 +116,46 @@
 
 <div class="container">
 
-    <form class="form-signin" role="form">
+    <form action="auth/do/member/register" method="post" class="form-signin" role="form">
         <h2 class="form-signin-heading"><i class="glyphicon glyphicon-log-in"></i> 用户注册</h2>
-        <div class="form-group  has-feedback">
-            <input type="text" class="form-control" id="inputSuccess1" placeholder="请输入登录账号" autofocus>
+       <p th:text="${message}"></p>
+        <div id="add_acct_div" class="form-group  has-feedback">
+            <input type="text" name="loginacct" class="form-control" id="add_acct" placeholder="请输入登录账号" autofocus>
             <span class="glyphicon glyphicon-user form-control-feedback"></span>
+            <label id="acct_reminder"  class="control-label" for="add_email" hidden="hidden" style="margin-top:10px"></label>
         </div>
-        <div class="form-group  has-feedback">
-            <input type="text" class="form-control" id="inputSuccess2" placeholder="请输入登录密码" style="margin-top:10px;">
+        <div id="add_user_div" class="form-group  has-feedback">
+            <input type="text" name="username" class="form-control" id="add_user" placeholder="请输入用户昵称" >
+            <span class="glyphicon glyphicon-tag form-control-feedback"></span>
+            <label id="user_reminder"  class="control-label" for="add_email" hidden="hidden" style="margin-top:10px"></label>
+        </div>
+        <div id="add_pswd_div" class="form-group  has-feedback">
+            <input type="text" name="userpswd" class="form-control" id="add_pswd" placeholder="请输入登录密码" >
             <span class="glyphicon glyphicon-lock form-control-feedback"></span>
+            <label id="pswd_reminder"  class="control-label" for="add_email" hidden="hidden" style="margin-top:10px"></label>
         </div>
-        <div id="add_email_div" class="form-group has-success has-feedback">
-            <input type="text" class="form-control" id="add_email" placeholder="请输入邮箱地址" style="margin-top:10px;">
+        <div id="add_email_div" class="form-group has-feedback">
+            <input type="text" name="email" class="form-control" id="add_email" placeholder="请输入邮箱地址"  >
             <span class="glyphicon glyphicon glyphicon-envelope form-control-feedback"></span>
-            <label id="email_reminder" style="margin:10px auto 10px  auto" class="control-label" for="add_email"></label>
+            <label id="email_reminder"  class="control-label" for="add_email" hidden="hidden" style="margin-top:10px"></label>
         </div>
-        <div  class="form-group  has-feedback">
-            <input id="add_phone" name="phoneNum" type="text" class="form-control"  placeholder="请输入手机号"
+        <div id="add_phone_div"  class="form-group  has-feedback">
+            <input id="add_phone" name="phonenum" type="text" class="form-control"  placeholder="请输入手机号"
                    style="margin-top:10px;">
             <span class="glyphicon glyphicon glyphicon-earphone form-control-feedback"></span>
-            <p id="phoneNum_reminder" style="margin:10px auto 10px  auto"></p>
+            <label id="phoneNum_reminder"  class="control-label" for="add_email" hidden="hidden" style="margin-top:10px"></label>
         </div>
-        <div class="form-group  has-feedback">
-            <input type="text" class="form-control" id="inputSuccess5" placeholder="请输入验证码" style="margin-top:10px;">
-            <span class="glyphicon glyphicon glyphicon-comment form-control-feedback"></span>
+        <div id="add_code_div" class="form-group has-feedback">
+            <div class="input-group">
+                <input type="text" name="code" class="form-control" id="add_code" placeholder="请输入验证码" >
+                <span class="input-group-btn">
+                    <button type="button" id="sendBtn" class="btn  btn-success" style="margin-left:10px">获取验证码</button>
+                    <label id="code_reminder"  class="control-label" for="add_email" hidden="hidden" style="margin-top:10px"></label>
+                 </span>
+            </div>
+
         </div>
-        <button type="button" id="sendBtn" class="btn btn-lg btn-success btn-block"> 获取验证码</button>
-        <a class="btn btn-lg btn-success btn-block" href="login.html"> 注册</a>
+        <button id="regBtn" type="submit" class="btn btn-lg btn-success btn-block" href="login.html"> 注册</button>
     </form>
 </div>
 
