--- a/atcrowdfunding07-member-parent/atcrowdfunding12-member-authentication-consumer/src/main/resources/templates/member-login.html
+++ b/atcrowdfunding07-member-parent/atcrowdfunding12-member-authentication-consumer/src/main/resources/templates/member-login.html
@@ -1,10 +1,122 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="keys" content="">
+    <meta name="author" content="">
+    <base th:href="@{/}"/>
+    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/login.css">
+    <script src="jquery/jquery-2.1.1.min.js"></script>
+    <script src="bootstrap/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="layer/layer.js"></script>
+    <script type="text/javascript">
+        $(function () {
+            //给登陆按钮保存单击事件
+            $("#loginBtn").click(function () {
+
+                $.ajax({
+                    url: "auth/member/do/login",
+                    type: "post",
+                    data: {
+                        "loginacct": $("#inputSuccess1").val(),
+                        "userpswd": $("#inputSuccess2").val()
+                    },
+                    dataType: "json",
+                    success: function (response) {
+                        if (response.result == "SUCCESS") {
+                            window.location.href = "auth/member/to/center/page";
+                        } else {
+                            $("#acct_reminder").empty();
+                            $("#pswd_reminder").empty();
+                            var code = response.code;
+                            var message = response.message;
+                            if (code == "100") { //用户不存在
+                                $("#login_acct_div").removeClass("has-success").addClass("has-error");
+                                $("#acct_reminder").removeAttr("hidden").append(message);
+                                $("#login_userpswd_div").removeClass("has-success").addClass("has-error");
+                            } else {
+                                if (code == "200") { //密码错误
+                                    $("#login_acct_div").removeClass("has-error").addClass("has-success");
+                                    $("#login_userpswd_div").removeClass("has-success").addClass("has-error");
+                                    $("#pswd_reminder").removeAttr("hidden").append(message);
+                                } else {
+                                    if (code == "300") { //服务器问题
+                                        layer.msg("服务器出现故障！维修小哥正在抢修！", {
+                                            icon: 5,
+                                            time: 4000,
+                                            btn: ['知道了', '关闭']
+                                        });
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    error: function (response) {
+                        layer.msg("服务器出现故障！维修小哥正在抢修！" + "错误状态码：" + response.status + " ；错误信息：" + response.statusText, {
+                            icon: 5,
+                            time: 4000,
+                            btn: ['知道了', '关闭']
+                        });
+                    }
+                });
+            });
+
+            $("#inputSuccess1").change(function () {
+                if ($("#login_acct_div").hasClass("has-error")) {
+                    $("#login_acct_div").removeClass("has-error").addClass("has-success");
+                    $("#acct_reminder").attr("hidden","hidden");
+                }
+            })
+
+            $("#inputSuccess2").change(function () {
+                if ($("#login_userpswd_div").hasClass("has-error")) {
+                    $("#login_userpswd_div").removeClass("has-error").addClass("has-success");
+                    $("#pswd_reminder").attr("hidden","hidden");
+                }
+            })
+
+        })
+    </script>
 </head>
 <body>
-    登陆页面！
+<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <div class="container">
+        <div class="navbar-header">
+            <div><a class="navbar-brand" href="index.html" style="font-size:32px;">尚筹网-创意产品众筹平台</a></div>
+        </div>
+    </div>
+</nav>
+
+<div class="container">
+    <form class="form-signin" role="form">
+        <h2 class="form-signin-heading"><i class="glyphicon glyphicon-log-in"></i> 用户登录</h2>
+        <p th:text="${session.loginmessage}" ></p>
+        <div id="login_acct_div" class="form-group has-success has-feedback">
+            <input name="loginacct" type="text" class="form-control" id="inputSuccess1" placeholder="请输入登录账号" autofocus>
+            <span class="glyphicon glyphicon-user form-control-feedback"></span>
+            <label id="acct_reminder" class="control-label" for="inputSuccess1" hidden="hidden"
+                   style="margin-top:5px"></label>
+        </div>
+        <div id="login_userpswd_div" class="form-group has-success has-feedback">
+            <input name="userpswd" type="password" class="form-control" id="inputSuccess2" placeholder="请输入登录密码"
+                   style="margin-top:10px;">
+            <span class="glyphicon glyphicon-lock form-control-feedback"></span>
+            <label id="pswd_reminder" class="control-label" for="inputSuccess2" hidden="hidden"
+                   style="margin-top:5px"></label>
+        </div>
+        <div class="checkbox" style="text-align:right;">
+            <a href="reg.html" th:href="@{/auth/member/to/reg/page.html}">我要注册</a>
+        </div>
+        <button id="loginBtn" type="button" class="btn btn-lg btn-success btn-block">登录</button>
+    </form>
+</div>
+<script src="jquery/jquery-2.1.1.min.js"></script>
+<script src="bootstrap/js/bootstrap.min.js"></script>
 </body>
 </html>
+
