--- a/atcrowdfunding07-member-parent/atcrowdfunding12-member-authentication-consumer/src/main/resources/templates/member-center.html
+++ b/atcrowdfunding07-member-parent/atcrowdfunding12-member-authentication-consumer/src/main/resources/templates/member-center.html
@@ -64,7 +64,7 @@
                         <li class="dropdown">
 
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i
-                                    class="glyphicon glyphicon-user"></i> <!-- 需要添加--><span class="caret"></span></a>
+                                    class="glyphicon glyphicon-user"></i> [[${session.loginMember.username}]]<span class="caret"></span></a>
                             <ul class="dropdown-menu" role="menu">
                                 <li><a href="member.html"><i class="glyphicon glyphicon-scale"></i> 会员中心</a></li>
                                 <li><a href="#"><i class="glyphicon glyphicon-comment"></i> 消息</a></li>
@@ -88,7 +88,7 @@
                         <img src="img/services-box1.jpg" class="img-thumbnail" alt="">
                         <div class="caption" style="text-align:center;">
                             <h3>
-                                <!--需要添加-->
+                                [[${session.loginMember.username}]]
                             </h3>
                             <span class="label label-danger" style="cursor:pointer;"
                                   onclick="window.location.href='accttype.html'">未实名认证</span>
