--- a/atcrowdfunding07-member-parent/atcrowdfunding12-member-authentication-consumer/src/main/resources/templates/member-login.html
+++ b/atcrowdfunding07-member-parent/atcrowdfunding12-member-authentication-consumer/src/main/resources/templates/member-login.html
@@ -29,7 +29,8 @@
                     dataType: "json",
                     success: function (response) {
                         if (response.result == "SUCCESS") {
-                            window.location.href = "auth/member/to/center/page";
+                            //window.location.href = "auth/member/to/center/page";
+                            window.location.href = "http://localhost:80/auth/member/to/center/page";
                         } else {
                             $("#acct_reminder").empty();
                             $("#pswd_reminder").empty();
