--- a/atcrowdfunding07-member-parent/atcrowdfunding13-member-project-consumer/src/main/resources/templates/project-return.html
+++ b/atcrowdfunding07-member-parent/atcrowdfunding13-member-project-consumer/src/main/resources/templates/project-return.html
@@ -513,7 +513,7 @@
 <!--                        <button type="button" class="btn  btn-default btn-lg"
                                 onclick="window.location.href='start-step-1.html'">上一步
                         </button>-->
-                        <a type="button" class="btn  btn-warning btn-lg" th:href="@{/project/create/confirm/page.html}">下一步</a>
+                        <a type="button" class="btn  btn-warning btn-lg" th:href="@{/project/create/confirm/page}">下一步</a>
                         <a class="btn"> 预览 </a>
                     </div>
                 </div>
