--- a/atcrowdfunding07-member-parent/atcrowdfunding13-member-project-consumer/src/main/resources/templates/project-success.html
+++ b/atcrowdfunding07-member-parent/atcrowdfunding13-member-project-consumer/src/main/resources/templates/project-success.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang="zh-CN"  xmlns:th="http://www.thymeleaf.org">
+<html lang="zh-CN" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" >
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
@@ -10,11 +10,6 @@
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="css/theme.css">
-    <script src="jquery/jquery-2.1.1.min.js"></script>
-    <script src="bootstrap/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="layer/layer.js"></script>
-    <script src="script/docs.min.js"></script>
-    <script src="script/back-to-top.js"></script>
     <style>
         #footer {
             padding: 15px 0;
@@ -76,21 +71,6 @@
             background-color: #ddd;
         }
     </style>
-    <script>
-        $(function () {
-            $('#myTab a').click(function (e) {
-                e.preventDefault()
-                $(this).tab('show')
-            });
-
-            $("#submitBtn").click(function(){
-                $("#confirmForm").submit();
-            });
-
-
-        });
-
-    </script>
 </head>
 <body>
 <div class="navbar-wrapper">
@@ -98,7 +78,7 @@
         <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
             <div class="container">
                 <div class="navbar-header">
-                    <a class="navbar-brand" href="index.html" style="font-size:32px;">尚筹网-创意产品众筹平台</a>
+                    <a class="navbar-brand" href="#" style="font-size:32px;">尚筹网-创意产品众筹平台</a>
                 </div>
                 <div id="navbar" class="navbar-collapse collapse" style="float:right;">
                     <ul class="nav navbar-nav">
@@ -183,21 +163,21 @@
                                 </div>
                                 <div class="col-md-3 column">
                                     <div class="progress" style="height:50px;border-radius:0;position: absolute;width: 75%;right:49px;">
-                                        <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 100%;height:50px;">
+                                        <div class="progress-bar progress-bar-default" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 100%;height:50px;">
                                             <div style="font-size:16px;margin-top:15px;">3. 确认信息</div>
                                         </div>
                                     </div>
                                     <div style="right: 0;border:10px solid #ddd;border-left-color: #88b7d5;border-width: 25px;position: absolute;
-                                             border-left-color: rgba(92, 184, 92, 1);
-                                             border-top-color: rgba(92, 184, 92, 0);
-                                             border-bottom-color: rgba(92, 184, 92, 0);
-                                             border-right-color: rgba(92, 184, 92, 0);
+                                              border-left-color: rgba(221, 221, 221, 1);
+                                             border-top-color: rgba(221, 221, 221, 0);
+                                             border-bottom-color: rgba(221, 221, 221, 0);
+                                             border-right-color: rgba(221, 221, 221, 0);
                                         ">
                                     </div>
                                 </div>
                                 <div class="col-md-3 column">
                                     <div class="progress" style="height:50px;border-radius:0;">
-                                        <div class="progress-bar progress-bar-default" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 100%;height:50px;">
+                                        <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 100%;height:50px;">
                                             <div style="font-size:16px;margin-top:15px;">4. 完成</div>
                                         </div>
                                     </div>
@@ -212,7 +192,7 @@
                                 <div class="col-md-12 column">
                                     <blockquote style="border-left: 5px solid #f60;color:#f60;padding: 0 0 0 20px;">
                                         <b>
-                                            确认信息（请填写易付宝企业账号用于收款及身份核实）
+                                            完成
                                         </b>
                                     </blockquote>
                                 </div>
@@ -220,20 +200,11 @@
 
 
                                     <div class="row clearfix">
-                                        <div class="col-md-6 column">
-                                            <form id="confirmForm" th:action="@{/project/create/confirm}" method="post"  role="form">
-                                                <div class="form-group">
-                                                    <label for="exampleInputEmail1">易付宝企业账号：</label><input name="paynum" type="email" class="form-control" id="exampleInputEmail1" />
-                                                </div>
-                                                <div class="form-group">
-                                                    <label for="exampleInputPassword1">法人身份证号：</label><input name="cardnum" type="password" class="form-control" id="exampleInputPassword1" />
-                                                </div>
-                                            </form>
-                                        </div>
-                                        <div class="col-md-6 column">
+                                        <div class="col-md-12 column">
                                             <div class="panel panel-default">
-                                                <div class="panel-body" style="padding:40px;">
-                                                    <i class="glyphicon glyphicon-user"></i> 易购账户名：18801282948<br><br><span style="margin-left:60px;">您正在使用该账号发起众筹项目</span>
+                                                <div class="panel-body" style="padding:60px;">
+                                                    <i class="glyphicon glyphicon-ok" style="color:green;font-size:40px;"></i> <span style="margin-left:20px;">你发起的众筹项目信息已经提交完毕，我们会在5~7个工作日内对项目进行审核，请耐心等候</span>
+                                                    <p style="margin-left:60px;">你能在会员中心-我的众筹- 发起的项目中查看</p>
                                                 </div>
                                             </div>
                                         </div>
@@ -243,9 +214,7 @@
                         </div>
                     </div>
                     <div class="panel-footer" style="text-align:center;">
-                        <!--<button type="button" class="btn  btn-default btn-lg" onclick="window.location.href='start-step-2.html'">上一步</button>-->
-                        <button id="submitBtn" type="button" class="btn  btn-warning btn-lg">提交</button>
-                        <a class="btn" > 保存草稿 </a>
+                        <a type="button" class="btn  btn-warning btn-lg" th:href='@{/member/my/crowd}'>我的众筹</a>
                     </div>
                 </div>
             </div>
@@ -258,10 +227,10 @@
             <div class="col-md-12 column">
                 <div id="footer">
                     <div class="footerNav">
-                        <a rel="nofollow" href="http://www.layoutit.cn">关于我们</a> | <a rel="nofollow" href="http://www.layoutit.cn">服务条款</a> | <a rel="nofollow" href="http://www.layoutit.cn">免责声明</a> | <a rel="nofollow" href="http://www.layoutit.cn">网站地图</a> | <a rel="nofollow" href="http://www.layoutit.cn">联系我们</a>
+                        <a rel="nofollow" href="http://www.atguigu.com">关于我们</a> | <a rel="nofollow" href="http://www.atguigu.com">服务条款</a> | <a rel="nofollow" href="http://www.atguigu.com">免责声明</a> | <a rel="nofollow" href="http://www.atguigu.com">网站地图</a> | <a rel="nofollow" href="http://www.atguigu.com">联系我们</a>
                     </div>
                     <div class="copyRight">
-                        Copyright ?2017-2017layoutit.cn 版权所有
+                        Copyright ?2017-2017atguigu.com 版权所有
                     </div>
                 </div>
 
@@ -270,7 +239,16 @@
     </div>
 
 </div> <!-- /container -->
-
+<script src="jquery/jquery-2.1.1.min.js"></script>
+<script src="bootstrap/js/bootstrap.min.js"></script>
+<script src="script/docs.min.js"></script>
+<script src="script/back-to-top.js"></script>
+<script>
+    $('#myTab a').click(function (e) {
+        e.preventDefault()
+        $(this).tab('show')
+    })
+</script>
 </body>
 </html>
 
