--- a/atcrowdfunding07-member-parent/atcrowdfunding13-member-project-consumer/src/main/resources/templates/project-show-detail.html
+++ b/atcrowdfunding07-member-parent/atcrowdfunding13-member-project-consumer/src/main/resources/templates/project-show-detail.html
@@ -228,16 +228,16 @@
                                             <span th:if="${return.signalPurchase==0}"
                                                   style="float:right;font-size:12px;">无限额，[[${return.supproterCount}]]位支持者</span>
                                             <span th:if="${return.signalPurchase==1}"
-                                                  style="float:right;font-size:12px;">限额[[${return.purchase}]]位，[[${return.supproterCount}]]位支持者</span>
+                                                  style="float:right;font-size:12px;">限额[[${return.count}]]位，[[${return.supproterCount}]]位支持者</span>
                                         </h3>
                                     </div>
                                     <div class="panel-body">
                                         <p th:if="${return.freight==0}">配送费用：包邮></p>
                                         <p th:if="${return.freight>0}">配送费用：￥[[${return.freight}]]</p>
                                         <p>预计发放时间：项目筹款成功后的[[${return.returnDate}]]天内</p>
-                                        <button type="button" class="btn  btn-warning btn-lg"
-                                                onclick="window.location.href='pay-step-1.html'">支持
-                                        </button>
+                                        <a type="button" class="btn  btn-warning btn-lg"
+                                           th:href="'http://localhost:80/order/confirm/return/info/'+${detailProjectVO.projectId}+'/'+${return.returnId}">支持
+                                        </a>
                                         <br><br>
                                         <p th:text="${return.content}">
                                             感谢您的支持，在众筹开始后，您将以79元的优惠价格获得“遇见彩虹?”智能插座一件（参考价208元）。</p>
@@ -323,70 +323,34 @@
             <div class="modal-body">
                 <div class="container-fluid">
                     <div class="row clearfix">
+                        <!--左侧项目展示-->
                         <div class="col-sm-3 col-md-3 column" id="myScrollspy">
                             <ul class="nav nav-tabs nav-stacked">
-                                <li class="active"><a href="#section-1">￥1.00</a></li>
-                                <li class="active"><a href="#section-2">￥149.00</a></li>
-                                <li class="active"><a href="#section-3">￥249.00</a></li>
-                                <li class="active"><a href="#section-4">￥549.00</a></li>
-                                <li class="active"><a href="#section-5">￥1999.00</a></li>
+                                <li th:each="return : ${detailProjectVO.detailReturnVOList}" class="active">
+                                    <a href="#section-1" th:href="'http://localhost:80/project/get/project/detail/'+${detailProjectVO.projectId}+'#section-'+${return.returnId}">￥[[${return.supportMoney}]]</a>
+                                </li>
                             </ul>
                         </div>
+                        <!--右侧项目显示-->
                         <div id="navList" class="col-sm-9 col-md-9 column" style="height:400px;overflow-y:auto;">
-                            <h2 id="section-1" style="border-bottom:1px dashed #ddd;"><span
-                                    style="font-size:20px;font-weight:bold;">￥1.00</span><span
-                                    style="font-size:12px;margin-left:60px;">无限额，223位支持者</span></h2>
-                            <p>配送费用：全国包邮</p>
-                            <p>预计发放时间：项目筹款成功后的30天内</p>
-                            <button type="button" class="btn  btn-warning btn-lg "
-                                    onclick="window.location.href='pay-step-1.html'">支持
-                            </button>
-                            <br><br>
-                            <p>每满1750人抽取一台活性富氢净水直饮机，至少抽取一台。抽取名额（小数点后一位四舍五入）=参与人数÷1750人，由苏宁官方抽取。</p>
-                            <hr>
-                            <h2 id="section-2" style="border-bottom:1px dashed #ddd;"><span
-                                    style="font-size:20px;font-weight:bold;">￥149.00</span><span
-                                    style="font-size:12px;margin-left:60px;">无限额，223位支持者</span></h2>
-                            <p>配送费用：全国包邮</p>
-                            <p>预计发放时间：项目筹款成功后的30天内</p>
-                            <button type="button" class="btn  btn-warning btn-lg "
-                                    onclick="window.location.href='pay-step-1.html'">支持
-                            </button>
-                            <br><br>
-                            <p>每满1750人抽取一台活性富氢净水直饮机，至少抽取一台。抽取名额（小数点后一位四舍五入）=参与人数÷1750人，由苏宁官方抽取。</p>
-                            <hr>
-                            <h2 id="section-3" style="border-bottom:1px dashed #ddd;"><span
-                                    style="font-size:20px;font-weight:bold;">￥249.00</span><span
-                                    style="font-size:12px;margin-left:60px;">无限额，223位支持者</span></h2>
-                            <p>配送费用：全国包邮</p>
-                            <p>预计发放时间：项目筹款成功后的30天内</p>
-                            <button type="button" class="btn  btn-warning btn-lg "
-                                    onclick="window.location.href='pay-step-1.html'">支持
-                            </button>
-                            <br><br>
-                            <p>每满1750人抽取一台活性富氢净水直饮机，至少抽取一台。抽取名额（小数点后一位四舍五入）=参与人数÷1750人，由苏宁官方抽取。</p>
-                            <hr>
-                            <h2 id="section-4" style="border-bottom:1px dashed #ddd;"><span
-                                    style="font-size:20px;font-weight:bold;">￥549.00</span><span
-                                    style="font-size:12px;margin-left:60px;">无限额，223位支持者</span></h2>
-                            <p>配送费用：全国包邮</p>
-                            <p>预计发放时间：项目筹款成功后的30天内</p>
-                            <button type="button" class="btn  btn-warning btn-lg "
-                                    onclick="window.location.href='pay-step-1.html'">支持
-                            </button>
-                            <br><br>
-                            <p>每满1750人抽取一台活性富氢净水直饮机，至少抽取一台。抽取名额（小数点后一位四舍五入）=参与人数÷1750人，由苏宁官方抽取。</p>
-                            <hr>
-                            <h2 id="section-5" style="border-bottom:1px dashed #ddd;"><span
-                                    style="font-size:20px;font-weight:bold;">￥1999.00</span><span
-                                    style="font-size:12px;margin-left:60px;">无限额，223位支持者</span></h2>
-                            <p>配送费用：全国包邮</p>
-                            <p>预计发放时间：项目筹款成功后的30天内</p>
-                            <button type="button" class="btn  btn-warning btn-lg "
-                                    onclick="window.location.href='pay-step-1.html'">支持
-                            </button>
-                            <br><br>
-                            <p>每满1750人抽取一台活性富氢净水直饮机，至少抽取一台。抽取名额（小数点后一位四舍五入）=参与人数÷1750人，由苏宁官方抽取。</p>
+                            <div th:each="return : ${detailProjectVO.detailReturnVOList}">
+                                <h2 th:if="${return.signalPurchase==0}"  th:id="'section-'+${return.returnId}" style="border-bottom:1px dashed #ddd;"><span
+                                        style="font-size:20px;font-weight:bold;">￥[[${return.supportMoney}]]</span><span
+                                        style="font-size:12px;margin-left:60px;">无限额，[[${return.supproterCount}]]位支持者</span></h2>
+                                <h2 th:if="${return.signalPurchase>0}"  th:id="'section-'+${return.returnId}" style="border-bottom:1px dashed #ddd;"><span
+                                        style="font-size:20px;font-weight:bold;">￥[[${return.supportMoney}]]</span><span
+                                        style="font-size:12px;margin-left:60px;">限额[[${return.count}]]名，[[${return.supproterCount}]]位支持者</span></h2>
+                                <p th:if="${return.freight==0}">配送费用：全国包邮</p>
+                                <p th:if="${return.freight!=0}">配送费用：[[${return.freight}]]</p>
+                                <p>预计发放时间：项目筹款成功后的[[${return.returnDate}]]天内</p>
+                                <a type="button" class="btn  btn-warning btn-lg "
+                                   th:href="'http://localhost:80/order/confirm/return/info/'+${detailProjectVO.projectId}+'/'+${return.returnId}"
+                                        >支持
+                                </a>
+                                <br><br>
+                                <p th:text="${return.content}">每满1750人抽取一台活性富氢净水直饮机，至少抽取一台。抽取名额（小数点后一位四舍五入）=参与人数÷1750人，由苏宁官方抽取。</p>
+                                <hr>
+                            </div>
                         </div>
                     </div>
                 </div>
