--- a/atcrowdfunding07-member-parent/atcrowdfunding12-member-authentication-consumer/src/main/resources/templates/portal.html
+++ b/atcrowdfunding07-member-parent/atcrowdfunding12-member-authentication-consumer/src/main/resources/templates/portal.html
@@ -218,19 +218,20 @@
     </style>
 </head>
 <body>
+<!-- 尚筹网入口 -->
 <div class="navbar-wrapper">
     <div class="container">
         <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
             <div class="container">
                 <div class="navbar-header">
-                    <a class="navbar-brand" href="index.html" style="font-size:32px;">尚筹网-创意产品众筹平台</a>
+                    <a class="navbar-brand" href="index.html" th:href="@{/}"  style="font-size:32px;">西大众筹网-创意产品众筹平台</a>
                 </div>
                 <div id="navbar" class="navbar-collapse collapse" style="float:right;">
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="login.html" th:href="@{/auth/member/to/login/page.html}">登录</a></li>
                         <li><a href="member-reg" th:href="@{/auth/member/to/reg/page.html}">注册</a></li>
                         <li><a>|</a></li>
-                        <li><a href="admin-login.html">管理员入口</a></li>
+                        <li><a href="http://localhost:8080/atcrowdfunding/admin/to/login/page.html">管理员入口</a></li>
                     </ul>
                 </div>
             </div>
@@ -277,7 +278,7 @@
 
 <div class="container marketing">
 
-    <!-- Three columns of text below the carousel -->
+    <!-- 三个广告栏位 -->
     <div class="row"> <!-- 广告栏位 -->
         <div class="col-lg-4">
             <img class="img-circle" src="img/p1.jpg" alt="Generic placeholder image"
@@ -300,8 +301,9 @@
             <p>随处使用的驱蚊纽扣，<br>解决夏季蚊虫问题。</p>
             <p><a class="btn btn-default" href="project.html" role="button">项目详情 &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
-    </div><!-- 广告栏位 -->
+    </div>
 
+    <!-- -->
     <div th:if="${#strings.isEmpty(portal_data)}">没有加载到任何分类信息！</div>
     <div th:if="${not #strings.isEmpty(portal_data)}">
         <div th:each="type : ${portal_data}" class="container">
@@ -373,26 +375,8 @@
     </div>
 
 
-    <!-- FOOTER -->
-    <div class="container">
-        <div class="row clearfix">
-            <div class="col-md-12 column">
-                <div id="footer">
-                    <div class="footerNav">
-                        <a rel="nofollow" href="http://www.atguigu.com">关于我们</a> | <a rel="nofollow"
-                                                                                      href="http://www.atguigu.com">服务条款</a>
-                        | <a rel="nofollow" href="http://www.atguigu.com">免责声明</a> | <a rel="nofollow"
-                                                                                        href="http://www.atguigu.com">网站地图</a>
-                        | <a rel="nofollow" href="http://www.atguigu.com">联系我们</a>
-                    </div>
-                    <div class="copyRight">
-                        Copyright ?2017-2017atguigu.com 版权所有
-                    </div>
-                </div>
-
-            </div>
-        </div>
-    </div>
+    <!-- 页脚 -->
+    <div th:replace="include::footer" ></div>
 
 </div><!-- /.container -->
 
