完成project的所有展示且搜索的功能，接下来完成资产总览

--- a/atcrowdfunding07-member-parent/atcrowdfunding13-member-project-consumer/src/main/resources/templates/project-show-detail.html
+++ b/atcrowdfunding07-member-parent/atcrowdfunding13-member-project-consumer/src/main/resources/templates/project-show-detail.html
@@ -69,60 +69,17 @@
     </script>
 </head>
 <body>
-<div class="navbar-wrapper">
-    <div class="container">
-        <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-            <div class="container">
-                <div class="navbar-header">
-                    <a class="navbar-brand" href="#" style="font-size:32px;">尚筹网-创意产品众筹平台</a>
-                </div>
-                <div id="navbar" class="navbar-collapse collapse" style="float:right;">
-                    <ul class="nav navbar-nav">
-                        <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i
-                                    class="glyphicon glyphicon-user"></i> [[${session.loginMember.username}]]<span
-                                    class="caret"></span></a>
-                            <ul class="dropdown-menu" role="menu">
-                                <li><a href="member.html"><i class="glyphicon glyphicon-scale"></i> 会员中心</a></li>
-                                <li><a href="#"><i class="glyphicon glyphicon-comment"></i> 消息</a></li>
-                                <li class="divider"></li>
-                                <li><a href="index.html"><i class="glyphicon glyphicon-off"></i> 退出系统</a></li>
-                            </ul>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </div> <!-- 全局头 -->
-</div>
+<!-- 头部信息 -->
+<div th:replace="include::header"></div>
 
 <div class="container theme-showcase" role="main">
 
-    <div class="container">
-        <div class="row clearfix">
-            <div class="col-md-12 column">
-                <nav class="navbar navbar-default" role="navigation">
-                    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                        <ul class="nav navbar-nav">
-                            <li>
-                                <a rel="nofollow" href="index.html"><i class="glyphicon glyphicon-home"></i> 众筹首页</a>
-                            </li>
-                            <li>
-                                <a rel="nofollow" href="projects.html"><i class="glyphicon glyphicon-th-large"></i> 众筹项目</a>
-                            </li>
-                            <li>
-                                <a rel="nofollow" href="start.html"><i class="glyphicon glyphicon-edit"></i> 发起众筹</a>
-                            </li>
-                            <li>
-                                <a rel="nofollow" href="minecrowdfunding.html"><i class="glyphicon glyphicon-user"></i>
-                                    我的众筹</a>
-                            </li>
-                        </ul>
-                    </div>
-                </nav>
-            </div>
-        </div>
-    </div> <!-- 子导航头  -->
+
+
+        <!--众筹首页\项目总览\发起众筹\我的众筹 -->
+        <div th:replace="include::navCrowd"></div>
+
+
 
     <div th:if="${#strings.isEmpty(detailProjectVO)}"> 查询项目详情信息失败</div>
     <div th:if="${not #strings.isEmpty(detailProjectVO)}">
@@ -289,25 +246,8 @@
 
 </div>
 
-<div class="container" style="margin-top:20px;">
-    <div class="row clearfix">
-        <div class="col-md-12 column">
-            <div id="footer">
-                <div class="footerNav">
-                    <a rel="nofollow" href="http://www.atguigu.com">关于我们</a> | <a rel="nofollow"
-                                                                                  href="http://www.atguigu.com">服务条款</a>
-                    | <a rel="nofollow" href="http://www.atguigu.com">免责声明</a> | <a rel="nofollow"
-                                                                                    href="http://www.atguigu.com">网站地图</a>
-                    | <a rel="nofollow" href="http://www.atguigu.com">联系我们</a>
-                </div>
-                <div class="copyRight">
-                    Copyright ?2010-2014atguigu.com 版权所有
-                </div>
-            </div>
-
-        </div>
-    </div>
-</div> <!--全局脚-->
+<!--页脚-->
+<div th:replace="include::footer"></div>
 
 </div> <!-- /container -->
 
