--- a/atcrowdfunding07-member-parent/atcrowdfunding12-member-authentication-consumer/src/main/resources/templates/about-me.html
+++ b/atcrowdfunding07-member-parent/atcrowdfunding12-member-authentication-consumer/src/main/resources/templates/about-me.html
@@ -115,7 +115,7 @@
 <div th:replace="include::simpleHeader" ></div>
 
 <!--关于我们-->
-<div class="container">
+<div class="container" style="margin-top:50px">
     <div id="about">
         <div class="container">
             <div class="row">
