--- a/atcrowdfunding07-member-parent/atcrowdfunding12-member-authentication-consumer/src/main/resources/templates/portal.html
+++ b/atcrowdfunding07-member-parent/atcrowdfunding12-member-authentication-consumer/src/main/resources/templates/portal.html
@@ -307,7 +307,7 @@
                     <div class="box ui-draggable" id="mainBox">
                         <div class="mHd" style="">
                             <div class="path">
-                                <a href="projects.html">更多...</a>
+                                <a href="projects.html" th:href="@{/project/get/all/project}">更多...</a>
                             </div>
                             <h3>
                                 <span th:text="${type.name}">类别</span>
