--- a/atcrowdfunding07-member-parent/atcrowdfunding12-member-authentication-consumer/src/main/resources/templates/portal.html
+++ b/atcrowdfunding07-member-parent/atcrowdfunding12-member-authentication-consumer/src/main/resources/templates/portal.html
@@ -222,7 +222,7 @@
 </head>
 <body>
 <!-- 尚筹网入口 -->
-<div class="navbar-wrapper">
+<div  class="navbar-wrapper">
     <div class="container">
         <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
             <div class="container">
@@ -230,18 +230,27 @@
                     <a class="navbar-brand" href="index.html" th:href="@{/}" style="font-size:32px;">西大众筹网-创意产品众筹平台</a>
                 </div>
                 <div id="navbar" class="navbar-collapse collapse" style="float:right;">
-                    <ul class="nav navbar-nav navbar-right">
-                        <li><a href="login.html" th:href="@{/auth/member/to/login/page.html}">登录</a></li>
-                        <li><a href="member-reg" th:href="@{/auth/member/to/reg/page.html}">注册</a></li>
+                    <ul   class="nav navbar-nav navbar-right">
+                        <li th:if="${session.loginMember.username == null}"><a href="login.html" th:href="@{/auth/member/to/login/page.html}">登录</a></li>
+                        <li th:if="${session.loginMember.username == null}" ><a href="member-reg" th:href="@{/auth/member/to/reg/page.html}">注册</a></li>
+                        <li th:if="${session.loginMember.username != null}" class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="glyphicon glyphicon-user"></i> [[${session.loginMember.username}]]<span class="caret"></span></a>
+                            <ul class="dropdown-menu" role="menu">
+                                <li><a href="member.html" th:href="@{/auth/member/to/center/page}"><i class="glyphicon glyphicon-scale"></i> 会员中心</a></li>
+                                <li><a href="#"><i class="glyphicon glyphicon-comment"></i> 消息</a></li>
+                                <li class="divider"></li>
+                                <li><a href="index.html" th:href="@{/auth/member/logout}"><i class="glyphicon glyphicon-off"></i> 退出系统</a></li>
+                            </ul>
+                        </li>
                         <li><a>|</a></li>
                         <li><a href="http://localhost:8080/atcrowdfunding/admin/to/login/page.html">管理员入口</a></li>
                     </ul>
                 </div>
             </div>
         </nav>
-
     </div>
 </div>
+
 
 
 <!-- Carousel
